--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
      text-align:center;
      ">
      <h3>启动游戏 </h3>
-     <a href="https://drz54321.github.io/quberG/s.html" target="_blank" />
+     <a href="https://drz54321.github.io/quberG/index.html" target="_blank" />
  <button>点击启动游戏</button>
 </a>
     </div>
