--- a/ix.html
+++ b/ix.html
@@ -45,7 +45,7 @@
      ">
      
      <h3>启动游戏 </h3>
-     <a href="https://drz54321.github.io/quberG/index.html" target="_blank" />
+     <a href="https://drz54321.github.io/quberG/s.html" target="_blank" />
  <button>点击启动游戏</button>
 </a>
     </div>
